# torchdeform

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml  tests.yml
docs/: cdm_style_provenance.md  penny_provenance.md
examples/: guide.ipynb  tutorial.ipynb
src/torchdeform/: __init__.py  core.py
src/torchdeform/atmosphere/: __init__.py  atm.py
src/torchdeform/geometry/: __init__.py  coordinates.py
src/torchdeform/observation/: __init__.py  insar.py  los.py
src/torchdeform/simulation/: __init__.py  datasets.py  dem.py  generators.py  priors.py  real_dem.py
src/torchdeform/sources/: __init__.py  base.py  cdm.py  mogi.py  okada.py  pcdm.py  pecm.py  penny.py
tests/: test_pipeline_gradients.py
tests/atmosphere/: test_atm.py
tests/geometry/: test_coordinates.py
tests/observation/: test_insar.py  test_los.py  test_los_from_satellite.py
tests/simulation/: test_cdm_prior.py  test_dem.py  test_generators.py  test_priors.py  test_real_dem.py
tests/sources/: test_cdm_source.py  test_mogi_source.py  test_okada_source.py  test_pcdm_source.py  test_pecm_source.py  test_penny_source.py
tests/sources/data/: cdm_volume_golden.json  cdm_volume_golden_nu0.32.json  dc3d_golden.json  dc3d_golden_nu0.32.json  fialko_golden.json  nikkhoo_golden.json  pcdm_volume_golden.json  pcdm_volume_golden_nu0.32.json  pecm_volume_golden.json  pecm_volume_golden_nu0.32.json  penny_volume_golden.json
tests/sources/reference/: .gitignore  README.md  accuracy_report.py  gen_cdm_volume.py  gen_dc3d.py  gen_fialko.m  gen_nikkhoo.m  gen_pcdm_volume.py  gen_pecm_volume.py  gen_penny_volume.py  summarize_all.py
tests/sources/reference/nikkhoo/: CDM.m  pCDM.m
