[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "torchdeform"
version = "0.2.0"
description = "Differentiable synthetic geophysical deformation models and atmosphere in PyTorch"
requires-python = ">=3.11"
dependencies = [
    "torch"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
# Real-DEM loading (torchdeform.simulation.real_dem): GeoTIFF I/O needs rasterio,
# which brings numpy; numpy alone also covers the .npy/.npz raster paths.
dem = [
    "numpy",
    "rasterio",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]